// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<StaffStatus kind="shift"> > matches snapshot for state active 1`] = `
<span
  aria-label="Active"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-warning/30 bg-status-warning-bg text-status-warning-foreground dark:border-status-warning/40 dark:bg-status-warning-bg dark:text-status-warning-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="active"
  data-staff-status-tone="progress"
  title="Active"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-play"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polygon
      points="10 8 16 12 10 16 10 8"
    />
  </svg>
  <span>
    Active
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state completed 1`] = `
<span
  aria-label="Completed"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-success/30 bg-status-success-bg text-status-success-foreground dark:border-status-success/40 dark:bg-status-success-bg dark:text-status-success-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="completed"
  data-staff-status-tone="success"
  title="Completed"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m9 12 2 2 4-4"
    />
  </svg>
  <span>
    Completed
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state ending-soon 1`] = `
<span
  aria-label="Ending soon"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-warning/30 bg-status-warning-bg text-status-warning-foreground dark:border-status-warning/40 dark:bg-status-warning-bg dark:text-status-warning-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="ending-soon"
  data-staff-status-tone="warning"
  title="Ending soon"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polyline
      points="12 6 12 12 16 14"
    />
  </svg>
  <span>
    Ending soon
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state late 1`] = `
<span
  aria-label="Late"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-critical/30 bg-status-critical-bg text-status-critical-foreground dark:border-status-critical/40 dark:bg-status-critical-bg dark:text-status-critical-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="late"
  data-staff-status-tone="danger"
  title="Late"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-triangle-alert"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
    />
    <path
      d="M12 9v4"
    />
    <path
      d="M12 17h.01"
    />
  </svg>
  <span>
    Late
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state missed 1`] = `
<span
  aria-label="Missed"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-critical/30 bg-status-critical-bg text-status-critical-foreground dark:border-status-critical/40 dark:bg-status-critical-bg dark:text-status-critical-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="missed"
  data-staff-status-tone="danger"
  title="Missed"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-x"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="m15 9-6 6"
    />
    <path
      d="m9 9 6 6"
    />
  </svg>
  <span>
    Missed
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state on-break 1`] = `
<span
  aria-label="On break"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-warning/30 bg-status-warning-bg text-status-warning-foreground dark:border-status-warning/40 dark:bg-status-warning-bg dark:text-status-warning-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="on-break"
  data-staff-status-tone="warning"
  title="On break"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-pause"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="10"
      x2="10"
      y1="15"
      y2="9"
    />
    <line
      x1="14"
      x2="14"
      y1="15"
      y2="9"
    />
  </svg>
  <span>
    On break
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state returned-timesheet 1`] = `
<span
  aria-label="Timesheet returned"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-warning/30 bg-status-warning-bg text-status-warning-foreground dark:border-status-warning/40 dark:bg-status-warning-bg dark:text-status-warning-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="returned-timesheet"
  data-staff-status-tone="warning"
  title="Timesheet returned"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-file-pen"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.5 22H18a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v9.5"
    />
    <path
      d="M14 2v4a2 2 0 0 0 2 2h4"
    />
    <path
      d="M13.378 15.626a1 1 0 1 0-3.004-3.004l-5.01 5.012a2 2 0 0 0-.506.854l-.837 2.87a.5.5 0 0 0 .62.62l2.87-.837a2 2 0 0 0 .854-.506z"
    />
  </svg>
  <span>
    Timesheet returned
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state starting-soon 1`] = `
<span
  aria-label="Starting soon"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-warning/30 bg-status-warning-bg text-status-warning-foreground dark:border-status-warning/40 dark:bg-status-warning-bg dark:text-status-warning-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="starting-soon"
  data-staff-status-tone="warning"
  title="Starting soon"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <polyline
      points="12 6 12 12 16 14"
    />
  </svg>
  <span>
    Starting soon
  </span>
</span>
`;

exports[`<StaffStatus kind="shift"> > matches snapshot for state upcoming 1`] = `
<span
  aria-label="Upcoming"
  class="inline-flex items-center gap-1.5 rounded-full border font-medium whitespace-nowrap align-middle px-2 py-0.5 text-xs [&_svg]:size-3 border-status-info/30 bg-status-info-bg text-status-info-foreground dark:border-status-info/40 dark:bg-status-info-bg dark:text-status-info-foreground"
  data-staff-status-kind="shift"
  data-staff-status-state="upcoming"
  data-staff-status-tone="info"
  title="Upcoming"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-calendar-clock"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 7.5V6a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h3.5"
    />
    <path
      d="M16 2v4"
    />
    <path
      d="M8 2v4"
    />
    <path
      d="M3 10h5"
    />
    <path
      d="M17.5 17.5 16 16.3V14"
    />
    <circle
      cx="16"
      cy="16"
      r="6"
    />
  </svg>
  <span>
    Upcoming
  </span>
</span>
`;
